# cmake-experiments

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt
include/cmake-experiments/: cmake-experiments.hpp
source/: cmake-experiments.cpp
test/: CMakeLists.txt
test/source/: cmake-experiments_test.cpp
